# buffer

./: .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md  buffer.doap  meson.build  pyproject.toml
buffer/: .flake8  .ruff.toml  application.py  config_manager.py  const.py.in  editor_search_entry.py  editor_search_header_bar.py  editor_text_view.py  emergency_saves_manager.py  font_size_selector.py  main.py.in  meson.build  migration_assistant.py  preferences_dialog.py  theme_selector.py  timed_revealer_notification.py  widgets.py  window.py
build-aux/flatpak/: org.gnome.gitlab.cheywood.Buffer.Devel.json
data/: meson.build  org.gnome.gitlab.cheywood.Buffer.desktop.in.in  org.gnome.gitlab.cheywood.Buffer.gschema.xml.in  org.gnome.gitlab.cheywood.Buffer.metainfo.xml.in.in  resources.gresource.xml
data/gtksourceview-5/styles/: buffer-dark.xml  buffer-high-contrast-dark.xml  buffer-high-contrast.xml  buffer.xml
data/icons/: meson.build
data/ui/: about_dialog.ui.in  base_style.css  editor_search_entry.ui  editor_search_header_bar.ui  editor_text_view.ui  font_size_selector.ui  meson.build  preferences_dialog.ui  theme_selector.ui  timed_revealer_notification.ui  window.ui
po/: LINGUAS  POTFILES.in  buffer.pot  de.po  en_GB.po  nb.po  pt_BR.po
