glade_conf = configuration_data()
glade_conf.set('PACKAGE_URL', website)
glade_conf.set('DATA_DIR', pkgdatadir)
glade_conf.set('LOCALE_DIR', join_paths(get_option('prefix'), get_option('datadir'), 'locale'))
glade_conf.set('APPID', app_id)
glade_conf.set('VERSION', buffer_version + version_suffix)
glade_conf.set('CONTRIBUTORS', contributors)
glade_conf.set('TRANSLATORS', translators)
glade_conf.set('authorfullname', authorfullname)
glade_conf.set('prettyname', prettyname)
